Fix nasty spacing for no comments

--- a/resources/comments.sass
+++ b/resources/comments.sass
@@ -14,6 +14,10 @@ a
   h2
     margin-bottom: 20px
 
+.no-comments-message
+  margin-top: -15px
+  margin-left: 2.5em
+
 .comment-body
   padding-right: 30px
   padding-left: 30px
